@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="service.sleepy.watchdog"
        name="Sleepy Watchdog"
-       version="0.1.13"
+       version="0.1.14"
        provider-name="Birger Jesch, thanks to Martin Schlosser">
   <extension point="xbmc.service"
              library="default.py" start="[login|startup]" />
