@@ -1,23 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<strings>
-    <string id="32100">Sleepy WatchDog</string>
-    <string id="32115">Perform action '%s' in %s seconds...</string>
-    <!-- setting strings -->
-    <string id="32120">max Idle Time</string>
-    <string id="32121">Action to execute</string>
-    <string id="32122">Show notification before perform action</string>
-    <string id="32123">Duration of notification</string>
-    <string id="32124">Test current settings (just wait 1 minute)</string>
-    <string id="32125">Turn off TV (CEC)</string>
-    <string id="32126">Addon ID [,parameter]</string>
-    <string id="32127">Jump into Main Menu</string>
-    <string id="32128">Keep WatchDog alive</string>
-    <!-- defined actions -->
-    <string id="32130">Stop playing media</string>
-    <string id="32131">Reboot</string>
-    <string id="32132">Shutdown</string>
-    <string id="32133">Hibernate</string>
-    <string id="32134">Suspend</string>
-    <string id="32135">Run Addon</string>
-    <string id="32136">Exit Kodi</string>
-</strings>
