@@ -1,23 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<strings>
-    <string id="32100">Sleepy WatchDog</string>
-    <string id="32115">Die Aktion '%s' wird in %s Sekunden ausgeführt...</string>
-    <!-- setting strings -->
-    <string id="32120">maximale Inaktivität</string>
-    <string id="32121">auszuführende Aktion</string>
-    <string id="32122">Benachrichtige Nutzer, bevor eine Aktion ausgeführt wird</string>
-    <string id="32123">Benachrichtigungsdauer</string>
-    <string id="32124">aktuelle Einstellungen testen (bitte 1 Minute warten)</string>
-    <string id="32125">TV ausschalten (CEC)</string>
-    <string id="32126">Addon ID [,Parameter]</string>
-    <string id="32127">ins Hauptmenü wechseln</string>
-    <string id="32128">WatchDog weiterhin ausführen</string>
-    <!-- defined actions -->
-    <string id="32130">Abspielen stoppen</string>
-    <string id="32131">System neu starten</string>
-    <string id="32132">System ausschalten</string>
-    <string id="32133">System in Ruhezustand versetzen</string>
-    <string id="32134">System in Bereitschaft versetzen</string>
-    <string id="32135">Addon starten</string>
-    <string id="32136">Kodi beenden</string>
-</strings>
