@@ -1,3 +1,7 @@
+[B]0.1.14[/B]
+- Bugfix
+- Language XML Files changed to Transifex .po
+
 [B]0.1.13[/B]
 - Minor Bugfixes
 
